Finish tests for individual add commands